--- a/src/index.css
+++ b/src/index.css
@@ -1,105 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&family=Roboto&display=swap');
 
-:root {
-  background-color: var(--primary-background-color);
-  color: var(--primary-font-color);
-}
-
-.App {
-  width: 100%;
-  height: 100vh;
+:root, ::before, ::after {
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
   background: url("../public/nepal.jpeg");
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.header-content h1 {
-  font-size: 2.5rem;
-  text-align: center;
-  font-weight: 1000;
-  margin: 0.5rem;
-}
-
-.header-content p{
-  text-align: center;
-  font-size: 2rem;
-  color: rgb(255, 255, 255);
-  font-weight: 1000;
-  margin: 1rem;
-}
-
-.cards-count {
-  color: rgb(255, 255, 255);
-  font-weight: 1000;
-  font-size: 1.25rem;
-  margin: 0;
-}
-
-.container {
-  width: 95%;
-  margin: 2rem auto;
-  padding: 2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: space-between;
-  justify-content: center;
-  flex-wrap: wrap;
-  cursor: pointer;
-}
-
-.card-content {
-  padding: 2rem;
-  background-color: var(--primary-card-color);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px 5px rgba(154, 25, 25, 0.3);
-  overflow: hidden;
-  font-size: 1.5rem;
-}
-
-.card-content:hover{
-  transform: translateY(-10px);
-  box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.1);
-  transition: all ease 0.2s;
-}
-
-.container img{
-  min-height: 60%;
-}
-
-.container p {
-  line-height: 1.5rem;
-  max-height: 10%;
-  text-overflow: hidden;
-  margin: 0;
-}
-
-.buzz-content {
-  color: rgb(136, 36, 36);
-}
-.buzz-content {
-  color: rgb(53, 53, 90);
-}
-
-button {
-  font-size: 1.15rem;
-  width: 100px;
-  padding: 0.65rem;
-  color: #f0eae3;
-  background-color: #8b8bc9;
-  border-radius: 10px;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-button:hover{
-  background-color: blue;
-  box-shadow: 10px 10px 10px 10px rgba(215, 166, 225, 0.5);
 }
 
