--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
-  background: url("../public/nepal.jpeg");
   background-size: cover;
+  background: url("/nepal-village.webp");
 }
 
